--- a/SocialMedia/package.json
+++ b/SocialMedia/package.json
@@ -10,7 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "appwrite": "^16.0.2",
+    "appwrite": "^16.1.0",
+    "dotenv": "^16.4.7",
     "firebase": "^11.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
